Verify that allows creating a User